HelloUltraviolet/Fixtures/RejectedSource/FFI/InvalidUnwindMode/Expected.uv
//! Expected diagnostic metadata for the InvalidUnwindMode rejected-source specimen.

expectedDiagnostic("E-SYS-3355", "rule.23.UnwindMode-Invalid-Err")
